// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixup code action > produces correct prompt for a limited diagnostic 1`] = `
"<fixupProblemCode>export function getRerankWithLog(
    chatClient: ChatClient
): (query: string, results: ContextResult[]) => Promise<ContextResult[]> {
    if (TestSupport.instance) {
        const reranker = TestSupport.instance.getReranker()
        return (query: string, results: ContextResult[]): Promise<ContextResult[]> => reranker.rerank(query, results)
    }

    const reranker = new LLMReranker(chatClient)
    return async (userQuery: string, results: ContextResult[]): Promise<ContextResult[]> => {
        const start = performance.now()
        const rerankedResults = await reranker.rerank(userQuery, results)
        const duration = performance.now() - start
        logDebug('Reranker:rerank', JSON.stringify({ duration }))
        const rerank
    }
}</fixupProblemCode>

Fix the following warning from within <fixupProblemCode></fixupProblemCode>: Type 'null' is not assignable to type 'ContextResult[]'."
`;

exports[`fixup code action > produces correct prompt for code with a single diagnostic 1`] = `
"<fixupProblemCode>export function getRerankWithLog(
    chatClient: ChatClient
): (query: string, results: ContextResult[]) => Promise<ContextResult[]> {
    if (TestSupport.instance) {
        const reranker = TestSupport.instance.getReranker()
        return (query: string, results: ContextResult[]): Promise<ContextResult[]> => reranker.rerank(query, results)
    }

    const reranker = new LLMReranker(chatClient)
    return async (userQuery: string, results: ContextResult[]): Promise<ContextResult[]> => {
        const start = performance.now()
        const rerankedResults = await reranker.rerank(userQuery, results)
        const duration = performance.now() - start
        logDebug('Reranker:rerank', JSON.stringify({ duration }))
        const rerank
    }
}</fixupProblemCode>

Fix the following ts error from within <fixupProblemCode></fixupProblemCode>: Type 'null' is not assignable to type 'ContextResult[]'."
`;

exports[`fixup code action > produces correct prompt for code with multiple diagnostics and overlapping ranges 1`] = `
"<fixupProblemCode>export function getRerankWithLog(
    chatClient: ChatClient
): (query: string, results: ContextResult[]) => Promise<ContextResult[]> {
    if (TestSupport.instance) {
        const reranker = TestSupport.instance.getReranker()
        return (query: string, results: ContextResult[]): Promise<ContextResult[]> => reranker.rerank(query, results)
    }

    const reranker = new LLMReranker(chatClient)
    return async (userQuery: string, results: ContextResult[]): Promise<ContextResult[]> => {
        const start = performance.now()
        const rerankedResults = await reranker.rerank(userQuery, results)
        const duration = performance.now() - start
        logDebug('Reranker:rerank', JSON.stringify({ duration }))
        const rerank
    }
}</fixupProblemCode>

Fix the following ts error from within <fixupProblemCode></fixupProblemCode>: 'const' declarations must be initialized.


Fix the following ts warning from within <fixupProblemCode></fixupProblemCode>: 'rerank' is declared but its value is never read.


Fix the following ts error from within <fixupProblemCode></fixupProblemCode>: Variable 'rerank' implicitly has an 'any' type."
`;

exports[`fixup code action > produces correct prompt for diagnostics with related information 1`] = `
"<fixupProblemCode>         .taur</fixupProblemCode>

Fix the following rustc error from within <fixupProblemCode></fixupProblemCode>: no field \`taur\` on type \`&mut tauri::Config\`
Code related to this diagnostic:
a field with a similar name exists: \`tauri\`
<fixupRelatedCode>foo
bar
foo</fixupRelatedCode>
"
`;
